# qp-knight-lab-processing

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml  qiita-plugin-ci.yml
qp_klp/: Amplicon.py  AmpliconStep.py  Assays.py  CHECKLIST.txt  FailedSamplesRecord.py  Instruments.py  Metagenomic.py  MetagenomicStep.py  Protocol.py  SequencingTech.py  StandardAmpliconWorkflow.py  StandardMetagenomicWorkflow.py  StandardMetatranscriptomicWorkflow.py  Step.py  TODO_CHECKLIST.txt  TellseqMetagenomicWorkflow.py  WorkflowFactory.py  Workflows.py  __init__.py  configuration.json  klp.py  klp_util.py  myutil.py  process_amplicon_job.py  process_metagenomics_job.py
qp_klp/scripts/: configure_klp.py
qp_klp/tests/: 230224_M05314_0347_000000000-KVMH3.ABTX_20230227_11052.1.tsv  bad_mapping_file.txt  good-prep-file-small.txt  good-prep-file.txt  good-sample-sheet.csv  good_mapping_file.txt  mapping_file.csv  sample_info_file_1_bad_blanks.tsv  sample_info_file_1_blanks.tsv  test_MetaGenomicWorkflow.py  test_WorkflowFactory.py  test_amplicon_step.py  test_amplicon_step.txt  test_basics.py  (+8 more)
scripts/: configure_klp  start_klp
sequence_processing_pipeline/: FastQCJob.py  MultiQCJob.py  TellReadJob.py  aggregate_counts.py  configuration.json
tests/: configuration.json  good-prep-file-small.txt  test_ConvertJob.py  test_FastQCJob.py  test_GenPrepFileJob.py  test_Job.py  test_MultiQCJob.py  test_NuQCJob.py  test_PacBioWorflow.py  test_Pipeline.py  test_PipelineError.py  test_PrepNuQCWorkflow.py  test_SeqCountsJob.py  test_TRIntegrateJob.py  test_TellReadJob.py  test_WorkflowFactory.py  test_commands.py  test_helpers.py  test_util.py  test_workflows.py
(+192 files in other folders)
