[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qp_klp"
# version strings must comply with PEP 440:
# https://peps.python.org/pep-0440/
version = "2022.4"
authors = [
    {name = "Qiita Development Team", email = "qiita.help@gmail.com"},
]
description = "Qiita Plugin: Knight Lab Processing"
readme = "README.rst"
# ">=" required as most available versions of 3.9 will be "3.9.17" or
# similar.
requires-python = ">=3.9"
keywords = ["bioinformatics", "qiita", "sequence_processing_pipeline"]
license = {text = "BSD"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
    ]
dependencies = [
    "nose>=0.10.1",
    "click>=3.3",
    "future",
    "pandas",
    "qiita-files@https://github.com/qiita-spots/qiita-files/archive/master.zip",
    "qiita_client@https://github.com/qiita-spots/qiita_client/archive/master.zip",
    "sequence-processing-pipeline@https://github.com/biocore/mg-scripts/archive/master.zip"
]
[project.scripts]
configure_klp = "qp_klp.scripts.configure_klp:config"
start_klp = "qp_klp.scripts.start_klp:execute"
